# di_example

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  di_example_config.hpp.in  main.cpp
cmake/: CMakeLists.txt
cmake/modules/: GitHelpers.cmake  ProjectOptions.cmake  UseGTest.cmake
docs/diagrams/: di.uxf
platform_abstraction/: CMakeLists.txt  CPlatformStorageDelegate.cpp  CPlatformStorageDelegate.hpp
platform_api/: CMakeLists.txt  IStorageService.hpp
platform_consumer/: CMakeLists.txt  CPlatformConsumer.cpp  CPlatformConsumer.hpp
platform_implementation/: CMakeLists.txt  CPlatformStorageService.cpp  CPlatformStorageService.hpp
tests/: CMakeLists.txt  CPlatformConsumerTest.cpp
tests/Mocks/: CPlatformStorageMock.hpp
